--- a/public/contact.html
+++ b/public/contact.html
@@ -17,9 +17,16 @@
 
         <form class="w-full max-w-lg flex flex-col items-center">
             <div class="flex space-x-4 w-full mb-4">
-                <input type="text" placeholder="Your name" id="name-input" class="w-1/2 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
-                <input type="email" placeholder="Your email" id="email-input" class="w-1/2 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
+              <div id="divname">
+                <input type="text" placeholder="Your name" id="name-input" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
+                
             </div>
+            <div>
+                <input type="email" placeholder="Your email" id="email-input" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
+              
+            </div>
+            </div>
+
             <textarea placeholder="Your question here..." id="message-input" class="w-full p-3 h-32 border border-gray-300 rounded-md resize-none focus:outline-none focus:ring focus:ring-orange-300 mb-6"></textarea>
             <button e.preventDefault(); type="submit" id="send" class="w-full py-3 bg-orange-500 text-white font-semibold rounded-md hover:bg-orange-600 transition" >SEND</button>
         </form>
