--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -25,12 +25,11 @@
       </div>
       <nav class="mt-8">
         <ul>
-          <li><a href="#" class="flex items-center p-4 hover:bg-gray-100"><span class="mr-2"><span
-                  class="icon-[fluent-mdl2--b-i-dashboard]" style="color: #DDA15E;"></span></span>Dashboard</a></li>
-          <li><a href="#" class="flex items-center p-4 hover:bg-gray-100 text-lBrown"><span class="mr-2"><span
-                  class="icon-[fluent-mdl2--product]" style="color: #DDA15E;"></span></span>Product</a></li>
-          <li><a href="#" class="flex items-center p-4 hover:bg-gray-100"><span class="mr-2"><span
-                  class="icon-[mdi--user]" style="color: #DDA15E;"></span></span>Customer</a></li>
+          <li><a href="dashboardStats.html" class="flex items-center p-4 hover:bg-gray-100"><span
+                class="mr-2"><span class="icon-[fluent-mdl2--b-i-dashboard]"></span></span>Dashboard</a></li>
+          <li><a href="Dashboard.html" class="flex items-center p-4 hover:bg-gray-100 text-lBrown"><span class="mr-2"><span
+                  class="icon-[fluent-mdl2--product]"></span></span>Product</a>
+          </li>
         </ul>
       </nav>
     </aside>
@@ -130,7 +129,7 @@
 
         <div class="mb-3">
           <label for="category" class="block text-gray-700 font-medium mb-1">Category</label>
-          <select  name="category"
+          <select name="category"
             class="w-full border border-gray-300 rounded p-2 focus:outline-none focus:border-[#DDA15E]" required>
             <option id="category" value="">Select category</option>
             <option value="beds">Beds</option>
